After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774097 - GtkPrintOperation should not truncate job names
GtkPrintOperation should not truncate job names
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Printing
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-11-08 10:53 UTC by Carlos Garcia Campos
Modified: 2016-11-10 15:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
printing: Do not truncate job names in GtkPrintOperation (3.47 KB, patch)
2016-11-08 10:55 UTC, Carlos Garcia Campos
none Details | Review
printing: Do not truncate job names in GtkPrintOperation (3.65 KB, patch)
2016-11-08 11:07 UTC, Carlos Garcia Campos
committed Details | Review

Description Carlos Garcia Campos 2016-11-08 10:53:53 UTC
We are currently truncating job names to 255 bytes, because that's the maximum allowed length of job-name attribute in CUPS (see bug #755988). This is a CUPS limitation that GtkPrintOperation shouldn't need to know, and it shouldn't affect other backends, that might have other limitations or even no limitation at all. This has another side effect, that what you set as GtkPrintOperation:job-name could be different to what you get if the property is truncated, this is not documented in gtk_print_operation_set_job_name(). So, I think the job name should be truncated by the CUPS backend, right before setting the job-name attribute.
Comment 1 Carlos Garcia Campos 2016-11-08 10:55:12 UTC
Created attachment 339306 [details] [review]
printing: Do not truncate job names in GtkPrintOperation
Comment 2 Carlos Garcia Campos 2016-11-08 11:07:17 UTC
Created attachment 339307 [details] [review]
printing: Do not truncate job names in GtkPrintOperation
Comment 3 Matthias Clasen 2016-11-10 15:44:11 UTC
Review of attachment 339307 [details] [review]:

sure, looks fine to me
Comment 4 Carlos Garcia Campos 2016-11-10 15:58:36 UTC
Comment on attachment 339307 [details] [review]
printing: Do not truncate job names in GtkPrintOperation

Pushed to master and gtk-3-22 branches.